# project_anarchy

./: .coveragerc  .env  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  FAQ.md  GLOSSARY.md  INDEX.md  README.md  VERIFICATION_REPORT.md  docker-compose.yml  error_count.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/commands/: audit.md  check.md  docs.md  explore.md  git.md  onboard.md  progress.md  review.md  sop.md  spec.md  start.md
.github/workflows/: deploy.yml
api/: app.py  app.py.swp  auth_service.py  config_loader.py  contracts.py  data_corruption.py  db.py  db_connection_hell.py  dynamic_loader.py  event_system.py  final_coverage_completion.py  final_rca_scenarios.py  idor_vulnerable.py  risky_operations.py  secure_routes.py  streams.py  taint_endpoints.py  utils.py  validation_patterns.py
api/violations/: flake8_violations.py  ruff_violations.py
assets/: generate_large_file.js
configs/: framework_settings.ini
data/: malformed_notes.txt
dependencies/monorepo/: rush.json
dependencies/node_project/: package-lock.json  package.json  pnpm-lock.yaml
dependencies/python_project/: Pipfile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: OLD_SPECS.md
documentation/: API.md  SECURITY.md  TESTING.md
flow_analysis/: deadlock.py  race_condition.py  resource_leak.py
frameworks/angular_project/: angular.json  package.json
frameworks/django_project/: requirements.txt  settings.py  taint_views.py  urls.py
frameworks/fastapi_project/: config.py  main.py  requirements.txt  taint_routes.py
frameworks/react_project/: .env  package.json  webpack.config.js
frameworks/vite_project/: index.html  package.json  tsconfig.json  vite.config.ts
frameworks/vue_project/: MODULE_RESOLUTION_TESTS.md  index.html  package.json  tsconfig.json  vite.config.js
frontend/: Diamond_A.js  final_cli_triggers.js  framework_mess.js
frontend/components/: Diamond_A.js  Diamond_D.js
frontend/services/: api_service.js
frontend/utils/: Diamond_B.js  Diamond_C.js  complex_regex.js
frontend/violations/: eslint_violations.js  prettier_violations.js  typescript_violations.ts
full_stack_node/backend/: package.json  tsconfig.json
full_stack_node/frontend/: vite.config.ts
full_stack_node/shared/: types.ts
gateway/: package.json
gateway/src/: index.js
graph_nightmares/: god_object.py
graph_nightmares/hotspots/: critical.py
graph_nightmares/spaghetti/: module_a.py  module_b.py  module_c.py  module_d.py
migrations/: 20250113_risky_migration.sql
performance/: bottlenecks.py
polyglot_project/backend/: database.go  main.py  utils.rs
polyglot_project/frontend/: app.tsx  styles.scss
polyglot_project/scripts/: analyze.r  build.sh  deploy.rb
polyglot_project/wasm/: module.wat
python_pipeline/api/: fastapi_endpoint.py
python_pipeline/db/: database.py  sqlalchemy_models.py
python_pipeline/processing/: tasks.py
python_pipeline/services/: data_ingestion.py
rust_backend/src/: handlers.rs  unsafe_ops.rs  vulnerable.rs
scripts/: complex_processor.py  data_importer.py
security/: security_holes.py
static/: main.js.py
tests/: final_test_guidance.py  test_advanced.py  test_flaky.py  test_logic.py  test_rca_scenarios.py
(+97 files in other folders)
